# official_yg_test_file

./: README.md
back/: kkk.sh
back/diablo-onboard-sdk-with-serial/api/inc/: OSDK_HAL.hpp
back/diablo-test/diablo_ception/diablo_body/: CMakeLists.txt  control.py  odometry_data_test (copy).txt  odometry_data_test.txt  package.xml  remoteinfo.py  rotation.py  single_mpc.py  test.py  testmpc.py  testremote.py
back/diablo-test/diablo_ception/diablo_body/include/: .diablo_body_state.hpp.swp  diablo_battery.hpp  diablo_body_state.hpp  diablo_imu.hpp  diablo_legmotors.hpp
back/diablo-test/diablo_ception/diablo_body/src/: diablo_battery.cpp  diablo_body_state.cpp  diablo_imu.cpp  diablo_legmotors.cpp
back/diablo-test/diablo_ception/motion_msgs/: CMakeLists.txt  package.xml
back/diablo-test/diablo_ception/motion_msgs/msg/: Battery.msg  meter_read.msg
back/diablo-test/diablo_ctrl/: CMakeLists.txt  package.xml
back/diablo-test/diablo_ctrl/include/: diablo_ctrl.hpp
back/diablo-test/diablo_ctrl/src/: diablo_ctrl.cpp
back/diablo-test/diablo_utils/: CMakeLists.txt  package.xml
back/diablo-test/diablo_utils/include/diablo_utils/diablo_tools/: osdk_hal.hpp
back/ekf_pose/launch/: nokov.launch
back/ekf_pose/src/: ekf_node_vio_timesync_with_acc_pub.cpp
back/fake_ugv/src/: poscmd_2_odom.cpp
back/mapping/: CMakeLists.txt
back/mapping/config/: rviz_sim.rviz
back/mapping/include/mapping/: mapping.h
back/mapping/src/: mapping.cc  mapping_nodelet.cpp  新建文本文档.txt
back/mpc/config/: param.yaml
back/mpc/include/: mpc.h
back/mpc/include/mpc_utils/: traj_anal.hpp
back/mpc/launch/: test_mpc.launch
back/mpc/src/: mpc.cpp
back/planning/planning/: CMakeLists.txt
back/planning/planning/include/SIYIClient/: SIYIClient.h
back/planning/planning/include/env/: env.hpp
back/planning/planning/include/visualization/: visualization.hpp
back/planning/planning/launch/: fake_target.launch  sim.launch  single_test.launch
back/planning/planning/src/: SIYIClient.cpp  cap.py  capp.py  detect.py  odom_interpolation.cpp  oldcap.py  planning_nodelet.cpp  publish_cmd.cpp  simple_traj_publisher.cpp  src.code-workspace
back/planning/traj_opt/include/traj_opt/: traj_opt.h
back/planning/traj_opt/src/: traj_opt.cc
back/read_pcd/PCDFiles/: 629_1219_2.pcd
back/read_pcd/launch/: read_exp1.launch  read_real.launch  read_uav.launch
back/read_pcd/src/: read_pcd.cpp
back/siyi/: .siyiSDK_cli.cpp.swp  .siyiSDK_sev.cpp.swp  rtsp_opencv  rtsp_opencv.cpp  siyiSDK_sev.cpp  siyi_sev  test.ipynb
back/uav_simulator/mockamap/include/: maps.hpp
back/uav_simulator/mockamap/src/: maps.cpp  mockamap.cpp
back/uav_simulator/so3_controller/: CMakeLists.txt  convert_pipe_node.cpp
back/uav_simulator/so3_controller/include/so3_controller/: convert_pipe_node.h  pid_ctrl.h
back/uav_simulator/so3_controller/src/: convert_pipe_node copy.cpp  convert_pipe_node.cpp  convert_pipe_node002.cpp  convert_pipe_node002_save.cpp  convert_pipe_nodeyhw.cpp  convert_pipe_recv_test.cpp  pid_ctrl.cpp
back/uav_simulator/uav_simulator/config/: mockamap.yaml
front/FASTLIO2_SAM_LC/: README.md
front/FASTLIO2_SAM_LC/config/: localize.yaml  mapping.yaml
front/FASTLIO2_SAM_LC/launch/: localize.launch
front/FASTLIO2_SAM_LC/rviz/: localize.rviz  mapping.rviz
front/FASTLIO2_SAM_LC/save_pcds/: map_filter.pcd  map_radius_filter.pcd  test1.pcd
front/FASTLIO2_SAM_LC/src/: commons.cpp  localizer_node.cpp  map_builder_node.cpp
front/FAST_LIO/: CMakeLists.txt
front/FAST_LIO/config/: avia.yaml  avia2.yaml
front/FAST_LIO/launch/: amapping_avia .launch  mapping_avia.launch
front/local_sensing/: CMakeLists.txt
front/local_sensing/launch/: laser_sim.launch  pub_pcd.launch
front/local_sensing/src/: laser_sim_node.cpp  read_pcd_node.cpp
front/pcd2pgm_package/pcd2pgm/launch/: run.launch
